--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -92,7 +92,8 @@
             <td>{{ lead.created_by }}</td>
             <td>
               <div class="flex justify-content-end">
-                <p-button icon="pi pi-eye" [routerLink]="['/main/lead/view/', lead.lead_id]" pTooltip="檢視" tooltipPosition="top"
+                <p-button icon="pi pi-eye" [routerLink]="['/main/lead/view/', lead.lead_id]" pTooltip="檢視"
+                          tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button (click)="showDialog('edit',lead)" icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
                           styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
@@ -116,7 +117,7 @@
       <div class="col-6">
         <div class="field">
           <label><span class="text-red-600">*</span>線索狀態</label>
-          <p-dropdown placeholder="請選擇" optionLabel="name" [options]="status"
+          <p-dropdown placeholder="請選擇" optionLabel="name" [options]=which
                       formControlName="status" appendTo="body" (onChange)="statusValue($event)"
                       [ngClass]="{'ng-dirty':lead_form.controls['status'].hasError('required') && lead_form.controls['status'].touched}"
           ></p-dropdown>
@@ -130,16 +131,16 @@
           <!--          <input pInputText formControlName="created_by">-->
         </div>
       </div>
-        <div class="col-6">
-          <div class="field">
-            <label><span class="text-red-600">*</span>帳戶</label>
-            <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
-                        [filter]="true" optionLabel="label" appendTo="body"
-                        filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
-                        [ngClass]="{'ng-dirty':lead_form.controls['account_name'].hasError('required') && lead_form.controls['account_name'].touched}">
-            </p-dropdown>
-          </div>
+      <div class="col-6">
+        <div class="field">
+          <label><span class="text-red-600">*</span>帳戶</label>
+          <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
+                      [filter]="true" optionLabel="label" appendTo="body"
+                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
+                      [ngClass]="{'ng-dirty':lead_form.controls['account_name'].hasError('required') && lead_form.controls['account_name'].touched}">
+          </p-dropdown>
         </div>
+      </div>
       <ng-container *ngIf="dialogHeader !== '編輯線索'">
         <div class="col-6 flex justify-content-start mt-4">
           <p-button (click)="type.toggle($event)" icon="pi pi-plus" pTooltip="新增帳戶" tooltipPosition="top"
