--- a/src/app/views/components/login/login.component.html
+++ b/src/app/views/components/login/login.component.html
@@ -48,7 +48,7 @@
   <form class="form" [formGroup]="login_form">
     <div class="form_front">
       <div class="form_details">
-        <img class="img" src="./assets/img/logo/logo.png" width=200 height=130 alt="Collective_logo" title="Collective">
+        <img class="img" src="./assets/img/logo/logo.png" width=100 height=90 alt="Collective_logo" title="Collective">
       </div>
       <input pInputText placeholder="帳號" formControlName="user_name">
       <p-password placeholder="密碼" formControlName="password" [feedback]="false"></p-password>
@@ -61,7 +61,7 @@
     </div>
     <div class="form_back">
       <div class="form_details">
-        <img class="img" src="./assets/img/logo/logo.png" width=200 height=130 alt="Collective_logo" title="Collective">
+        <img class="img" src="../../../../assets/img/logo/logo.png" width=200 height=130 alt="Collective_logo" title="Collective">
       </div>
       <input pInputText placeholder="Firstname">
       <input pInputText placeholder="Username">
