--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,5 +1,7 @@
   <p-menubar [model]="items" class="fixed-header-container">
-    <ng-template pTemplate="start"></ng-template>
+    <ng-template pTemplate="start">
+      <img class="img" src="./assets/img/logo/home.png" width=23 height=29.8 alt="Collective_logo" title="Collective">
+    </ng-template>
     <ng-template pTemplate="end">
     <span class="container-input">
       <input type="text" placeholder="搜尋" name="text" class="input">
