feat: p-button-text

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,12 @@ p-card {
     border-radius: 6px;
   }
 
+  .p-button-text {
+      background: 0;
+      color: #607D8B;
+      border-color: transparent;
+    }
+
   .p-inputtext,.p-multiselect,.p-inputnumber {
     width: 100%;
     border-radius: 6px;
