--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,6 +1,7 @@
   <p-menubar [model]="items" class="fixed-header-container">
     <ng-template pTemplate="start">
-      <img class="img" src="./assets/img/logo/home.png" width=23 height=29.8 alt="Collective_logo" title="Collective">
+      <img class="img" src="./assets/img/logo/home.png" width=23 height=29.8 alt="Collective_logo" title="Collective"
+      style="display: flex">
     </ng-template>
     <ng-template pTemplate="end">
     <span class="container-input">
