feat: 產品getall api

--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -7,15 +7,16 @@
           <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [paginator]="true"
+      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="GetAllProduct" [paginator]="true" #dt1
+               sortField="updated_at" [sortOrder]="-1" [globalFilterFields]="['name','code','price','description']"
                [rows]="5" [totalRecords]="totalRecords" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)"
                [showCurrentPageReport]="true" [(first)]="first"
                currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
-              <td><input type="text" [(ngModel)]="filterText" (input)="filterProducts()" pInputText
-                         placeholder="關鍵字搜索"></td>
+<!--              <td><input type="text" [(ngModel)]="filterText" (input)="filterProducts()" pInputText-->
+<!--                         placeholder="關鍵字搜索"></td>-->
             </span>
           </div>
         </ng-template>
