fix: 行事曆圖例移至上方

--- a/src/app/views/features/event/event.component.html
+++ b/src/app/views/features/event/event.component.html
@@ -1,15 +1,17 @@
 <div class="flex justify-content-center">
   <div class="col-10 mt-2">
     <full-calendar [options]="options"></full-calendar>
-    <div class="field mt-2">
-      <label><span class="reddot"></span>緊急事件</label>
-      <label><span class="orangedot"></span>客戶拜訪</label>
-      <label><span class="yellowdot"></span>電話</label>
-      <label><span class="greendot"></span>會議</label>
-      <label><span class="bluedot"></span>研討會</label>
-      <label><span class="cornflowerbluedot"></span>行銷</label>
-      <label><span class="purpledot"></span>年度拜訪</label>
-      <label><span class="pinkdot"></span>其他</label>
+    <div class="dot-group">
+      <div class="field mt-2">
+        <label><span class="reddot"></span>緊急事件</label>
+        <label><span class="orangedot"></span>客戶拜訪</label>
+        <label><span class="yellowdot"></span>電話</label>
+        <label><span class="greendot"></span>會議</label>
+        <label><span class="bluedot"></span>研討會</label>
+        <label><span class="cornflowerbluedot"></span>行銷</label>
+        <label><span class="purpledot"></span>年度拜訪</label>
+        <label><span class="pinkdot"></span>其他</label>
+      </div>
     </div>
   </div>
 </div>
