--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -1,34 +1,45 @@
 @import 'src/app/app.component.scss';
-:host ::ng-deep  .fc.fc-theme-standard .fc-toolbar .fc-button{
-  font-family: "Verdana", sans-serif;
-  background: #104673;
-  border: 0;
-  color: #FFFFFB;
-  cursor: pointer;
-  outline: 0;
-}
-:host ::ng-deep  .fc.fc-theme-standard .fc-toolbar .fc-button:hover{
-  border: 0;
-  background: #104673;
-  color: #FFFFFB;
-}
-::ng-deep .fc-toolbar-title {
-  font-family: "Verdana", sans-serif;
-  font-size: 24px;
-  color: #104673;
-}
-:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-next-button,
-:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-prev-button {
-  background: 0;
-  color: #104673;
-  border: none;
-}
-:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-next-button:hover,
-:host ::ng-deep .fc.fc-theme-standard .fc-toolbar .fc-prev-button:hover {
-  background-color: #ddd;
-  color: #333;
-  border: none;
-  box-shadow: none;
+
+:host ::ng-deep {
+  .fc.fc-theme-standard .fc-toolbar .fc-button {
+    font-family: "Verdana", sans-serif;
+    background: #104673;
+    border: 0;
+    color: #FFFFFB;
+    cursor: pointer;
+    outline: 0;
+  }
+
+  .fc.fc-theme-standard .fc-toolbar .fc-button:hover {
+    border: 0;
+    background: #104673;
+    color: #FFFFFB;
+  }
+
+  .fc-toolbar-title {
+    font-family: "Verdana", sans-serif;
+    font-size: 24px;
+    color: #104673;
+  }
+
+  .fc.fc-theme-standard .fc-toolbar .fc-next-button,
+  .fc.fc-theme-standard .fc-toolbar .fc-prev-button {
+    background: 0;
+    color: #104673;
+    border: none;
+  }
+
+  .fc.fc-theme-standard .fc-toolbar .fc-next-button:hover,
+  .fc.fc-theme-standard .fc-toolbar .fc-prev-button:hover {
+    background-color: #ddd;
+    color: #333;
+    border: none;
+    box-shadow: none;
+  }
+
+  .fc .fc-toolbar.fc-header-toolbar {
+    margin-bottom: 3.5rem;
+  }
 }
 
 .reddot {
@@ -39,6 +50,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .orangedot {
   height: 10px;
   width: 10px;
@@ -47,6 +59,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .yellowdot {
   height: 10px;
   width: 10px;
@@ -55,6 +68,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .greendot {
   height: 10px;
   width: 10px;
@@ -63,6 +77,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .bluedot {
   height: 10px;
   width: 10px;
@@ -71,6 +86,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .cornflowerbluedot {
   height: 10px;
   width: 10px;
@@ -79,6 +95,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .purpledot {
   height: 10px;
   width: 10px;
@@ -87,6 +104,7 @@
   display: inline-block;
   margin-right: 5px;
 }
+
 .pinkdot {
   height: 10px;
   width: 10px;
@@ -94,4 +112,11 @@
   border-radius: 50%;
   display: inline-block;
   margin-right: 5px;
+}
+
+.dot-group {
+  position: absolute;
+  top: 18%;
+  left: 30%;
+  transform: translate(-50%, 40%);
 }
