--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -108,7 +108,7 @@
 .pinkdot {
   height: 10px;
   width: 10px;
-  background-color: hotpink;
+  background-color: pink;
   border-radius: 50%;
   display: inline-block;
   margin-right: 5px;
