fix: 行事曆圖例位置

--- a/src/app/views/features/event/event.component.scss
+++ b/src/app/views/features/event/event.component.scss
@@ -115,8 +115,8 @@
 }
 
 .dot-group {
-  position: absolute;
-  top: 18%;
-  left: 30%;
+  position: relative;
+  top: -91%;
+  left: 51%;
   transform: translate(-50%, 40%);
 }
