style: account頭貼 & 待辦事項

--- a/src/app/views/components/dashboard/dashboard.component.html
+++ b/src/app/views/components/dashboard/dashboard.component.html
@@ -2,11 +2,12 @@
   <div class="col-10">
     <div class="grid">
       <!--左-->
-      <div class="col">
+      <div class="col flex justify-content-center">
         <!--帳戶-->
         <article class="tile" routerLink="/main/account">
-          <img class="h-12rem" alt="meow" src="https://i0.wp.com/www.printmag.com/wp-content/uploads/2021/02/4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif?fit=476%2C280&ssl=1"/>
-          <div class="tile-header h-20rem">
+<!--          <img class="h-12rem" alt="meow" src="https://i0.wp.com/www.printmag.com/wp-content/uploads/2021/02/4cbe8d_f1ed2800a49649848102c68fc5a66e53mv2.gif?fit=476%2C280&ssl=1"/>-->
+          <img class="h-18rem" src="./assets/img/logo/user.png"/>
+          <div class="tile-header h-4rem">
             <h3>
               <span>帳戶</span>
               <span>UrkEnergo LTD.</span>
@@ -19,7 +20,7 @@
         </article>
       </div>
       <!--中-->
-      <div class="col">
+      <div class="col flex justify-content-center">
         <div class="grid">
           <div class="col-6">
             <!--線索-->
@@ -36,7 +37,7 @@
               </a>
             </article>
           </div>
-          <div class="col-6">
+          <div class="col">
             <!--商機-->
             <article class="tile" routerLink="/main/opportunity">
               <div class="tile-header h-4rem">
@@ -51,7 +52,7 @@
               </a>
             </article>
           </div>
-          <div class="col-12 mt-1">
+          <div class="col-12 mt-2">
             <!--商品/服務-->
             <article class="tile" routerLink="/main/product">
               <div class="tile-header h-8rem">
@@ -66,7 +67,7 @@
               </a>
             </article>
           </div>
-          <div class="col-6 mt-1">
+          <div class="col-6 mt-3">
             <!--行事曆-->
             <article class="tile" routerLink="/main/event">
               <div class="tile-header h-11rem">
@@ -81,7 +82,7 @@
               </a>
             </article>
           </div>
-          <div class="col-6 mt-1">
+          <div class="col-6 mt-3">
             <!--行銷活動-->
             <article class="tile" routerLink="/main/campaign">
               <div class="tile-header h-11rem">
@@ -99,7 +100,7 @@
         </div>
       </div>
       <!--右-->
-      <div class="col">
+      <div class="col flex justify-content-center">
         <div class="grid">
           <div class="col-12">
             <!--報價-->
@@ -175,6 +176,39 @@
                 <span class="pi pi-chart-bar"></span>
               </a>
             </article>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <!--待辦事項-->
+        <div class="container">
+          <div class="menu-box block">
+            <h2 class="titular">待辦事項</h2>
+            <ul class="menu-box-menu">
+              <li>
+                <a class="menu-box-tab" href="#6"><i class="icon mt-3 fas fa-handshake scnd-font-color"></i>早上9:00拜訪xx公司
+                </a>
+              </li>
+              <li>
+                <a class="menu-box-tab" href="#8"><i class="icon mt-3 fas fa-comments scnd-font-color"></i>下午3:00A001會議室
+                </a>
+              </li>
+              <li>
+                <a class="menu-box-tab" href="#10"><i class="icon mt-3 fas fa-tasks scnd-font-color"></i>主管交辦事項
+                  <div class="menu-box-number">5</div>
+                </a>
+              </li>
+              <li>
+                <a class="menu-box-tab" href="#12"><i class="icon mt-3 fas fa-calendar scnd-font-color"></i>即將到來
+                  <div class="menu-box-number">3</div>
+                </a>
+              </li>
+              <li>
+                <a class="menu-box-tab" href="#13">
+                  <i class="icon mt-3 fas fa-chart-line scnd-font-color"></i>
+                  上週分析報告</a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
