--- a/src/app/views/components/dashboard/dashboard.component.scss
+++ b/src/app/views/components/dashboard/dashboard.component.scss
@@ -152,6 +152,128 @@ a {
   color: inherit;
 }
 
+// 待辦事項
+body {
+  background: #1f253d;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+h1 {
+  font-size: 23px;
+}
+
+h2 {
+  font-size: 17px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 15px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+h1, h2, p {
+  color: #fff;
+}
+
+a, span {
+  //color: #fff;
+}
+
+.scnd-font-color {
+  color: #9099b7;
+}
+
+.icon {
+  font-size: 25px;
+}
+
+.titular {
+  display: block;
+  line-height: 60px;
+  margin: 0;
+  text-align: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+/** CONTAINERS **/
+.container {
+  float: left;
+  width: 300px;
+}
+
+.block {
+  margin-bottom: 25px;
+  background: #f4f5f7;
+  border-radius: 20px;
+  box-shadow: 3px 3px 3px #CFCFCF;
+}
+
+/******************************************** LEFT CONTAINER *****************************************/
+.menu-box {
+  height: 360px;
+}
+
+.menu-box .titular {
+  background: rgba(68, 136, 164, 0.93);
+}
+
+.menu-box-menu .icon {
+  display: inline-block;
+  vertical-align: top;
+  width: 28px;
+  margin-left: 20px;
+  margin-right: 15px;
+}
+
+.menu-box-number {
+  width: 36px;
+  line-height: 22px;
+  background: #d3d3d3;
+  text-align: center;
+  border-radius: 15px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.menu-box-menu li {
+  height: 60px;
+  position: relative;
+}
+
+.menu-box-tab {
+  line-height: 60px;
+  display: block;
+  border-bottom: 1px solid #1f253d;
+  -webkit-transition: background .2s;
+  transition: background .2s;
+}
+
+.menu-box-tab:hover {
+  background: #EBEFF7;
+  border-top: 1px solid #1f253d;
+  text-decoration: none;
+}
+
+//.menu-box-tab:hover .icon {
+//  color: #fff;
+//}
+
+.menu-box-tab:hover .menu-box-number {
+  background: #e64c65;
+}
 
 
 
