--- a/src/app/views/container/container.component.html
+++ b/src/app/views/container/container.component.html
@@ -1,2 +1,19 @@
 <app-toolbar></app-toolbar>
+
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
+
+<!--<footer class="p-footer">-->
+<!--  <div class="col-4">-->
+<!--    <h3>-->
+<!--      <span class="foot">報告</span>-->
+<!--    </h3>-->
+<!--  </div>-->
+<!--  <div class="col-4">-->
+<!--    123-->
+<!--  </div>-->
+<!--  <div class="col-4">-->
+<!--    123-->
+<!--  </div>-->
+<!--</footer>-->
